<resources>
    <string name="app_name">Vegi</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="permissonmsg">Write External Storage permission allows us to save files. Please allow this permission in App Settings.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="raise_a_complaint">Raise a Complaint</string>
    <string name="faqs">FAQs</string>
    <string name="user_name">User Name</string>
    <string name="home">Home</string>
    <string name="review_cart">Review Cart</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="log_in">Log In</string>
    <string name="dummt_strind_product">An apple is an edible fruit produced by an apple tree (Malus domestica). Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor, Malus sieversii, is still found today.</string>
    <string name="add">Add</string>
    <string name="move_from_wish_list">Remove From \n WishList</string>


    <string name="map_key" translatable="true">------------</string>


    <string name="contactno">18008901790</string>
    <string name="supportemail">Support@gmail.com</string>
    <string name="add_delivery_address">Add Delivery Address</string>

    <string name="last_name">Last Name*</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="alternate_mobile_no">Alternate Mobile No</string>
    <string name="house_no_apartment_name">House No. Apartment Name Street*</string>
    <string name="society">Society*</string>
    <string name="street">Street*</string>
    <string name="city">City*</string>
    <string name="landmark">Landmark*</string>
    <string name="aera">Area*</string>
    <string name="pincode">Pincode</string>
    <string name="set_location">Set Location</string>
    <string name="address_type">Address Type*</string>

    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="make_this_address_as_default">Make this address as default</string>
    <string name="add_address">Add Address</string>
    <string name="done">Done</string>
    <string name="search_for_items_in_the_store">Search for items in the store</string>


    <string name="my_delivery_address">My Delivery Address</string>
    <string name="no_data_found">No Data Found</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="deliver_to">Deliver To</string>
    <string name="proceed_to_pay">Proceed To Pay</string>

    <string name="update_profile">Update Profile</string>
    <string name="first_name">FullName*</string>

    <string name="email">Email*</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>


    <string name="payment_summary">Payment Summary</string>
    <string name="sub_total">Sub Total</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_options">Payment Options</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online">Online</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="show">Show</string>

    <string name="place_order">Place Order</string>
    <string name="available_options">Available Options</string>
    <string name="about_this_product">About This Product</string>
    <string name="read_more">Read more…</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="search_products">Search Products</string>

    <string name="item">Item</string>

    <string name="continuetext">Continue</string>
    <string name="search">Search</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>

    <string name="my_adress">My Address</string>

    <string name="rating">Rating</string>
    <string name="tell_us_somthing">Tell Us Something…</string>

    <string name="have_an_issue">Have an Issue</string>
    <string name="titletext">Title*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="tell_us_what_you_like_or_dislike_about_the_product_n_n_n">Tell us what you like or dislike about the product* \n\n\n</string>

    <string name="your_coupons">Your Coupons</string>

    <string name="sort_by">Sort By</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="alphabetically">Alphabetically</string>


    <string name="call_us">Call us:</string>
    <string name="mail_us">Mail us:</string>

    <string name="checkout">Checkout</string>


    <string name="have_an_issuetext">Have an Issue</string>
    <string name="date_of_order">Date of Order:</string>
    <string name="delivery_slot">Delivery Slot</string>
    <string name="order_status">Order Status:</string>
    <string name="address">Address</string>
    <string name="payment_deatails">Payment Details</string>
    <string name="order_id">Order ID :</string>
    <string name="payment_type">Payment Type :</string>
    <string name="order_items">Order Items :</string>
    <string name="sheeping_charges">Shipping Charges :</string>
    <string name="coupen_amount">Coupon Discount :</string>
    <string name="sub_amount">Sub Amount :</string>
    <string name="total_amounttext">Total Amount :</string>
    <string name="my_orders">My Orders</string>
    <string name="refer_a_friends">Refer A Friends</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="name">name</string>
    <string name="defult">Default</string>
    <string name="namebtn">Name</string>
    <string name="view_all">view all</string>

    <string name="open">Open</string>
    <string name="discount">discount:</string>
    <string name="minimum_amount">Minimum amount:</string>
    <string name="apply">Apply</string>
    <string name="homebtn">Home</string>
    <string name="defaultbtn">Default</string>
    <string name="question">question</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="by_signing_in_you_agreeing_to_our">By signing in you agreeing to our</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="cancel">Cancel</string>

    <string name="weight">weight</string>

    <string name="out_of_stock">Out of Stock</string>
    <string name="updae">Update</string>
    <string name="cantfindocation">Can\'t find your location</string>
    <string name="selectcityfirst">Select City First</string>
    <string name="locationfetched">Location Fetched</string>
    <string name="seletctarea">Select Area</string>
    <string name="firstname">Please enter your first name</string>
    <string name="selectLname">Please enter your last name</string>
    <string name="selectmbile">Please enter your mobile </string>
    <string name="selectaptament">Please enter your house or apartment name </string>
    <string name="selectstreet">Please enter your street </string>
    <string name="enterlandark">Please enter landmark </string>
    <string name="selectcity">Please select city </string>

    <string name="selectarea">Please select area</string>
    <string name="selectsocity">Please enter society </string>
    <string name="enterpincode">Please enter pincode </string>
    <string name="fetchlocation">Please fetch location first</string>
    <string name="proceedtopay">Proceed To Pay</string>
    <string name="addnewaddress">Add New Address</string>
    <string name="removefromwishlist">Remove From \n Wishlist</string>
    <string name="addtowishlist">Add to Wishlist</string>
    <string name="readless">Read less…</string>
    <string name="readmore">Read more…</string>
    <string name="deleteconfirlmsg">Do you want to delete this Product ?</string>
    <string name="deleteconfiraddress">Do you want to delete this address ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="youreachmaxlimit">You reach minimum limit</string>
    <string name="nodatafound">No Cart Data Found</string>
    <string name="addtowishlistsuccessfully">Add to Wishlist SuccessFully</string>
    <string name="summary">Summary</string>
    <string name="items">Items</string>
    <string name="placeorder">Place Order</string>
    <string name="youreachedmaxlimit">You reached minimum Limit</string>
    <string name="locationfatched">Location Fetched</string>
    <string name="permissontoast">Write External Storage permission allows us to save files. Please allow this permission in App Settings.</string>
    <string name="entercarddetails">Enter Card Details</string>
    <string name="noorderfound">No Order Found</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="youreachminlimit">You will reach minimum limit</string>
    <string name="writetitlefirst">Write Title First</string>
    <string name="writedescriptionfirst">Write Description First</string>
    <string name="entermobilenumber">Enter Mobile Number</string>
    <string name="entervalidmobilenumber">Enter Valid Mobile Number</string>
    <string name="my_complains">My Complains</string>
    <string name="notifications">Notifications</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="loding">Loading...</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="order_details">Order Details</string>
    <string name="deleteaddress">Delete Address</string>
    <string name="deleteproduct">Delete Product</string>
    <string name="the_all_in_ine_food_shop">the all in The food shop</string>
    <string name="deleter_this_order">Deleter this order ?</string>
    <string name="do_not_press_back_button">Do not press back button</string>
    <string name="do_not_close_your_app">Do not close your app</string>
    <string name="completing_your_order">Completing your order</string>
    <string name="processing">Processing</string>
    <string name="only_on">Only cash on delivery orders can be cancelled...!</string>
    <string name="send_feedback">Send Feedback</string>


</resources>