<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/gmidum"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginVertical="3dp"
            android:alpha=".5"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_cencel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gmidum"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView

                android:id="@+id/tv_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gmidum"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/orange"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>