<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@drawable/kothamari" />

        <ImageView
            android:id="@+id/btnclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:src="@drawable/ic_outline_close_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/gsemibold"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/orange"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:fontFamily="@font/gheavy"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textSize="60sp" />

            <RelativeLayout

                android:id="@+id/googlelogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_gray_2"
                android:elevation="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="13dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="start"
                        android:layout_marginEnd="20dp"
                        android:layout_toLeftOf="@+id/tvsignin"
                        android:src="@drawable/google" />

                    <TextView
                        android:id="@+id/tvsignin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gmidum"
                        android:text="@string/sign_in_with_google"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </RelativeLayout>
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/glight"
                android:gravity="center"
                android:text="@string/by_signing_in_you_agreeing_to_our" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gsemibold"
                android:gravity="center"
                android:text="@string/terms_and_privacy_policy" />


        </LinearLayout>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_tomato" />

    </RelativeLayout>
</layout>