<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:src="@drawable/ic_outline_close_24"
            app:tint="@color/orange" />

        <RelativeLayout
            android:id="@+id/lytimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_ring"
                android:padding="2dp" />

            <ImageView
                android:id="@+id/btnPencil"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="2dp"
                android:background="@drawable/bg_round"
                android:backgroundTint="@color/orange"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/white" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lytimg"
            android:layout_marginTop="-50dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/gregular"
                android:inputType="textCapWords"
                android:hint="@string/enter_your_name"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gregular"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="40dp"
                android:background="@drawable/bg_round_gredent"
                android:elevation="5dp"
                android:fontFamily="@font/gbold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>