<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coupon"
            type="com.krushna.veginew.models.CouponRoot.DataItem" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gmidum"
                android:paddingVertical="2dp"
                android:text="@{coupon.couponCode}"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textSize="16sp"
                tools:text="xxxxxxxxx" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmidum"
                    android:text="@string/discount"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmidum"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="14sp"
                    tools:text="60" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmidum"
                    android:text="@string/minimum_amount"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvMinAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gmidum"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="14sp"
                    tools:text="60" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_round_gredent"
            android:fontFamily="@font/gmidum"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:text="@string/apply"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:alpha=".5"
            android:background="@color/gray" />

    </RelativeLayout>
</layout>